# demo-research-agent

./: .gitignore
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/memory/: __init__.py  chunking.py  embeddings.py  store.py
backend/memory/backends/: __init__.py  chroma.py  qdrant.py
backend/skills/planning/: SKILL.md
backend/skills/reflection/: SKILL.md
backend/tools/: __init__.py  example_tool.py  file_tools.py  web_search.py
frontend/: nuxt.config.ts  package-lock.json
frontend/app/: app.vue
frontend/app/components/: ReportView.vue
frontend/app/composables/: useResearchApi.ts
frontend/app/pages/: index.vue
frontend/app/pages/task/: [id].vue
frontend/app/types/: index.ts
